# HuggingFace-MultimodalLLM-App

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
docs/: mkdocs.yml
docs/docs/: index.md
llm_vlm_app/: dataset.py  features.py
llm_vlm_app/modeling/: predict.py
multimodal/: app.py
multimodal/src/: api_call.py  local_blip.py
multimodal/utils/: client.py  load_pdf.py
src/: __init__.py  dataset.py  features.py  plots.py
src/modeling/: predict.py  train.py
