[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "llm_vlm_app"
version = "0.0.1"
description = "School project"
authors = [
  { name = "ewkt" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["llm_vlm_app"]
include = ["pyproject.toml", "llm_vlm_app/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["llm_vlm_app"]
force-sort-within-sections = true

